--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           paths:
             - ./test
             - ./infrastructure
+      - run: ls -aR
       - terraform/init:
           path: ./infrastructure
       - terraform/validate:
@@ -30,6 +31,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
+      - run: ls -aR
       - terraform/apply:
           path: ./infrastructure
   infrastructure-test:
@@ -45,12 +47,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
-      - run: ls -R
-      - run: |
-          terraform providers lock \
-            -platform=windows_amd64 \
-            -platform=darwin_amd64 \
-            -platform=linux_amd64
+      - run: ls -aR
       - terraform/destroy:
           path: ./infrastructure
   
