--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,17 @@ jobs:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: cimg/base:stable
+      - image: tfsec/tfsec:latest
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!!!"
+          name: "TfSec"
+          command: "terraform init"
+          command: "terraform plan"
+          command: "tfsec . --format=json"
+          
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
