--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,7 @@ jobs:
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
-      - run:
-          name: "tfsec"
-          command: "terraform init"
-          command: "terraform plan"
-          command: "tfsec . --format=json"
+      - run: tfsec . --format=json
           
 
 # Orchestrate jobs using workflows
