--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,11 @@ jobs:
       - image: hashicorp/terraform
     steps:
       - checkout
-      - run: cd infrastructure && ls -R
-      - run: ls -R && terraform init
-      - run: terraform validate
-      - run: terraform plan
+      - run: |
+          cd infrastructure \
+            && terraform init \
+            && terraform validate \
+            && terraform plan
       - persist_to_workspace:
           root: ~/project
           paths:
