--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   tfsec_tests:
     docker:
-      - image: tfsec/tfsec:latest
+      - image: aquasec/tfsec:latest
     working_directory: /project  # Установите рабочий каталог в контейнере
     steps:
       - checkout
