--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install git and ssh
+          command: |
+            apt-get update
+            apt-get install -y git ssh
           name: Run tfsec
           command: tfsec . --format=json
           
