--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install git
             sudo apt-get install ssh
+      - run:
           name: "Run tfsec"
           command: tfsec . --format=json
           
