--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,9 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
+          name: Install Terraform
+          command: cd test && ./install_terraform
+      - run:
           name: Test Infrastructure
           command: |
             cd test \
