--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,9 @@ jobs:
       - checkout
       - run:
           name: Terraform init
-          command: terraform init
+          command: |
+            cd infrascture
+            terraform init
 
   terraform-validate-plan:
     executor: terraform-executor
