--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Terraform init
           command: |
-            ls -la
+            cd infrastructure
             terraform init
 
   terraform-validate-plan:
