--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ executors:
   terraform-executor: 
     docker:
       - image: hashicorp/terraform:latest 
-    working_directory: /infrastructure
+    working_directory: /tmp/project/infrastructure
 
 jobs:
   tfsec-test:
