--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,15 @@ jobs:
           name: Run tfsec tests
           command: tfsec . 
 
-  terraform-init:
-    executor: terraform-executor
-    steps:
-      - checkout
-      - run:
-          name: Terraform init
-          command: |
-            cd infrastructure
-            terraform init
+  # terraform-init:
+  #   executor: terraform-executor
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Terraform init
+  #         command: |
+  #           cd infrastructure
+  #           terraform init
 
   terraform-validate-plan:
     executor: terraform-executor
@@ -40,6 +40,7 @@ jobs:
           name: Terraform validate and plan
           command: |
             cd infrastructure
+            terraform init
             terraform validate
             terraform plan
 
@@ -80,10 +81,10 @@ workflows:
   build-deploy:
     jobs:
       - tfsec-test
-      - terraform-init
-      - terraform-validate-plan:
-          requires: 
-            - terraform-init
+      #- terraform-init
+      - terraform-validate-plan
+          # requires: 
+          #   - terraform-init
       - hold-for-approval-1:
           type: approval
       - terraform-apply:
